--- a/AiHackLibraryApi.csproj
+++ b/AiHackLibraryApi.csproj
@@ -4,11 +4,26 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile> <!-- Gera arquivo XML -->
+        <NoWarn>$(NoWarn);1591</NoWarn> <!-- Suprime avisos de documentação ausente -->
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.3" />
+        <PackageReference Include="xunit" Version="2.9.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="AiHackLibraryApi.Tests\obj\AiHackLibraryApi.Tests.csproj.nuget.dgspec.json" />
+      <_ContentIncludedByDefault Remove="AiHackLibraryApi.Tests\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="AiHackLibraryApi.Tests\obj\project.packagespec.json" />
     </ItemGroup>
 
 </Project>
